core/target/include/zz/carrier_proto.h

typedef enum {
    protonerf_FieldType_Skip = 0,
    protonerf_FieldType_Int32 = 1,
    protonerf_FieldType_Int64 = 2,
    protonerf_FieldType_Uint32 = 3,
    protonerf_FieldType_Uint64 = 4,
    protonerf_FieldType_Sint32 = 5,
    protonerf_FieldType_Sint64 = 6,
    protonerf_FieldType_Bool = 7,
    protonerf_FieldType_Enum = 8,
    protonerf_FieldType_Fixed64 = 9,
    protonerf_FieldType_Sfixed64 = 10,
    protonerf_FieldType_Double = 11,
    protonerf_FieldType_String = 12,
    protonerf_FieldType_Bytes = 13,
    protonerf_FieldType_Message = 14,
    protonerf_FieldType_Repeated = 15,
    protonerf_FieldType_Fixed32 = 16,
    protonerf_FieldType_Sfixed32 = 17,
    protonerf_FieldType_Float = 18,

} protonerf_FieldType;
protonerf_FieldType carrier_proto_SensorTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_SubscribeChangeTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_SysinfoTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_ConnectResponseTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_LoadTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_AuthorizationGetTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_PublishRequestTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_NetdevTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_DiscoveryResponseTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_NetAddressTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_InnerTraceResponseTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_ClaimOneTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_ClaimAllTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_TraceShadowTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_ClusterShardTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_FirmwareTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_FileSystemTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_RevokerTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_GenesisUpdateTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_NetRoute_Destination = 1,
    carrier_proto_NetRoute_Gateway = 2,
    carrier_proto_NetRoute_Source = 3,

} carrier_proto_NetRoute;
typedef enum {
    carrier_proto_LocationAccuracity_Hdop = 1,
    carrier_proto_LocationAccuracity_Vdop = 2,
    carrier_proto_LocationAccuracity_Pdop = 3,

} carrier_proto_LocationAccuracity;
protonerf_FieldType carrier_proto_LocationAccuracityTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_Sensors_Sensors = 1,

} carrier_proto_Sensors;
typedef enum {
    carrier_proto_PeerConnectRequest_Identity = 1,
    carrier_proto_PeerConnectRequest_Timestamp = 2,
    carrier_proto_PeerConnectRequest_Handshake = 3,
    carrier_proto_PeerConnectRequest_Route = 4,
    carrier_proto_PeerConnectRequest_Paths = 5,

} carrier_proto_PeerConnectRequest;
protonerf_FieldType carrier_proto_NoneTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_NetworkJoin_Secret = 1,

} carrier_proto_NetworkJoin;
typedef enum {
    carrier_proto_ProtoHeader_Len = 1,

} carrier_proto_ProtoHeader;
protonerf_FieldType carrier_proto_InteractiveAuthTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_Alias_Alias = 2,

} carrier_proto_Alias;
protonerf_FieldType carrier_proto_FilterByRoleTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_Switch_Name = 1,
    carrier_proto_Switch_Ports = 2,

} carrier_proto_Switch;
protonerf_FieldType carrier_proto_UnameTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_Confirmation_Ok = 1,
    carrier_proto_Confirmation_Error = 2,

} carrier_proto_Confirmation;
typedef enum {
    carrier_proto_Publish_Identity = 1,
    carrier_proto_Publish_Xaddr = 2,

} carrier_proto_Publish;
protonerf_FieldType carrier_proto_PublishTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_AuthorizationList_A = 1,

} carrier_proto_AuthorizationList;
typedef enum {
    carrier_proto_Bootloader_ActiveSide = 1,
    carrier_proto_Bootloader_BootReason = 2,

} carrier_proto_Bootloader;
protonerf_FieldType carrier_proto_CertificateTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_SensorsTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_ConnectRequest_Target = 1,
    carrier_proto_ConnectRequest_Timestamp = 2,
    carrier_proto_ConnectRequest_Handshake = 3,
    carrier_proto_ConnectRequest_Paths = 4,
    carrier_proto_ConnectRequest_Principal = 5,
    carrier_proto_ConnectRequest_Timeout = 6,
    carrier_proto_ConnectRequest_TargetType = 7,

} carrier_proto_ConnectRequest;
typedef enum {
    carrier_proto_DhcpLease_Ts = 1,
    carrier_proto_DhcpLease_Mac = 2,
    carrier_proto_DhcpLease_Ip = 3,
    carrier_proto_DhcpLease_Name = 4,

} carrier_proto_DhcpLease;
typedef enum {
    carrier_proto_Sensor__ValueType_None = 0,
    carrier_proto_Sensor__ValueType_MilliCelsius = 1,

} carrier_proto_Sensor__ValueType;
protonerf_FieldType carrier_proto_ArpTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_TraceResponseTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_SatelliteTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_ExceptionalRoute_Identity = 1,
    carrier_proto_ExceptionalRoute_This = 2,
    carrier_proto_ExceptionalRoute_Other = 3,
    carrier_proto_ExceptionalRoute_Blocked = 4,

} carrier_proto_ExceptionalRoute;
protonerf_FieldType carrier_proto_ExceptionalRouteTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_PeerConnectResponse_Ok = 1,
    carrier_proto_PeerConnectResponse_Handshake = 2,
    carrier_proto_PeerConnectResponse_Paths = 3,
    carrier_proto_PeerConnectResponse_Error = 4,

} carrier_proto_PeerConnectResponse;
protonerf_FieldType carrier_proto_WifiInterfaceTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_Authorization_Identity = 1,
    carrier_proto_Authorization_Resource = 2,

} carrier_proto_Authorization;
protonerf_FieldType carrier_proto_AuthorizationDelTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_PathTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_GenesisCurrentTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_ClusterState_Config = 1,

} carrier_proto_ClusterState;
protonerf_FieldType carrier_proto_ClusterStateTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_PeerConnectRequestTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_ConnectRequestTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_Belltower_Current = 1,
    carrier_proto_Belltower_Previous = 2,

} carrier_proto_Belltower;
protonerf_FieldType carrier_proto_AuthorizationAddTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_SupersedeTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_WifiStationTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_Arp__HwType_Unknown = 0,
    carrier_proto_Arp__HwType_Ethernet = 1,

} carrier_proto_Arp__HwType;
protonerf_FieldType carrier_proto_AliasTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_NetSurveyTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_LocationTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_Unpublish_Identity = 1,

} carrier_proto_Unpublish;
protonerf_FieldType carrier_proto_SwitchTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_InnerTraceRequestTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_Path__Category_Invalid = 0,
    carrier_proto_Path__Category_Local = 1,
    carrier_proto_Path__Category_Internet = 2,
    carrier_proto_Path__Category_BrokerOrigin = 3,

} carrier_proto_Path__Category;
protonerf_FieldType carrier_proto_FilterTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_ClusterConfigTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_ConfirmationTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_AuthListResult_Auth = 1,

} carrier_proto_AuthListResult;
protonerf_FieldType carrier_proto_CertificateRequestTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_Satellite__Constellation_Unknown = 0,
    carrier_proto_Satellite__Constellation_Galileo = 1,
    carrier_proto_Satellite__Constellation_Gps = 2,
    carrier_proto_Satellite__Constellation_Glonass = 3,

} carrier_proto_Satellite__Constellation;
protonerf_FieldType carrier_proto_NetworkGetResultTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_PeerConnectResponseTypes (uintptr_t const  index);
typedef enum {
    carrier_proto_ConnectRequest__TargetType_Identity = 0,
    carrier_proto_ConnectRequest__TargetType_Alias = 1,

} carrier_proto_ConnectRequest__TargetType;
typedef enum {
    carrier_proto_Mem_Total = 1,
    carrier_proto_Mem_Free = 2,
    carrier_proto_Mem_Available = 3,

} carrier_proto_Mem;
typedef enum {
    carrier_proto_Location__Fix_None = 0,
    carrier_proto_Location__Fix_Gps = 1,
    carrier_proto_Location__Fix_DGps = 2,
    carrier_proto_Location__Fix_Pps = 3,
    carrier_proto_Location__Fix_Rtk = 4,
    carrier_proto_Location__Fix_FloatRtk = 5,
    carrier_proto_Location__Fix_Estimated = 6,
    carrier_proto_Location__Fix_Manual = 7,
    carrier_proto_Location__Fix_Simulation = 8,

} carrier_proto_Location__Fix;