core/target/rust/carrier_proto.rs


#[derive(Clone)]
#[repr(C)]
pub enum NetRoute {
    carrier_proto_NetRoute_Destination = 1,
    carrier_proto_NetRoute_Gateway = 2,
    carrier_proto_NetRoute_Source = 3,

}

#[derive(Clone)]
#[repr(C)]
pub enum LocationAccuracity {
    carrier_proto_LocationAccuracity_Hdop = 1,
    carrier_proto_LocationAccuracity_Vdop = 2,
    carrier_proto_LocationAccuracity_Pdop = 3,

}

#[derive(Clone)]
#[repr(C)]
pub enum Sensors {
    carrier_proto_Sensors_Sensors = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum PeerConnectRequest {
    carrier_proto_PeerConnectRequest_Identity = 1,
    carrier_proto_PeerConnectRequest_Timestamp = 2,
    carrier_proto_PeerConnectRequest_Handshake = 3,
    carrier_proto_PeerConnectRequest_Route = 4,
    carrier_proto_PeerConnectRequest_Paths = 5,

}

#[derive(Clone)]
#[repr(C)]
pub enum NetworkJoin {
    carrier_proto_NetworkJoin_Secret = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum ProtoHeader {
    carrier_proto_ProtoHeader_Len = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum Alias {
    carrier_proto_Alias_Alias = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum Switch {
    carrier_proto_Switch_Name = 1,
    carrier_proto_Switch_Ports = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum Confirmation {
    carrier_proto_Confirmation_Ok = 1,
    carrier_proto_Confirmation_Error = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum Publish {
    carrier_proto_Publish_Identity = 1,
    carrier_proto_Publish_Xaddr = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum AuthorizationList {
    carrier_proto_AuthorizationList_A = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum Bootloader {
    carrier_proto_Bootloader_ActiveSide = 1,
    carrier_proto_Bootloader_BootReason = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum ConnectRequest {
    carrier_proto_ConnectRequest_Target = 1,
    carrier_proto_ConnectRequest_Timestamp = 2,
    carrier_proto_ConnectRequest_Handshake = 3,
    carrier_proto_ConnectRequest_Paths = 4,
    carrier_proto_ConnectRequest_Principal = 5,
    carrier_proto_ConnectRequest_Timeout = 6,
    carrier_proto_ConnectRequest_TargetType = 7,

}

#[derive(Clone)]
#[repr(C)]
pub enum DhcpLease {
    carrier_proto_DhcpLease_Ts = 1,
    carrier_proto_DhcpLease_Mac = 2,
    carrier_proto_DhcpLease_Ip = 3,
    carrier_proto_DhcpLease_Name = 4,

}

#[derive(Clone)]
#[repr(C)]
pub enum Sensor__ValueType {
    carrier_proto_Sensor__ValueType_None = 0,
    carrier_proto_Sensor__ValueType_MilliCelsius = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum ExceptionalRoute {
    carrier_proto_ExceptionalRoute_Identity = 1,
    carrier_proto_ExceptionalRoute_This = 2,
    carrier_proto_ExceptionalRoute_Other = 3,
    carrier_proto_ExceptionalRoute_Blocked = 4,

}

#[derive(Clone)]
#[repr(C)]
pub enum PeerConnectResponse {
    carrier_proto_PeerConnectResponse_Ok = 1,
    carrier_proto_PeerConnectResponse_Handshake = 2,
    carrier_proto_PeerConnectResponse_Paths = 3,
    carrier_proto_PeerConnectResponse_Error = 4,

}

#[derive(Clone)]
#[repr(C)]
pub enum Authorization {
    carrier_proto_Authorization_Identity = 1,
    carrier_proto_Authorization_Resource = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum ClusterState {
    carrier_proto_ClusterState_Config = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum Belltower {
    carrier_proto_Belltower_Current = 1,
    carrier_proto_Belltower_Previous = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum Arp__HwType {
    carrier_proto_Arp__HwType_Unknown = 0,
    carrier_proto_Arp__HwType_Ethernet = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum Unpublish {
    carrier_proto_Unpublish_Identity = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum Path__Category {
    carrier_proto_Path__Category_Invalid = 0,
    carrier_proto_Path__Category_Local = 1,
    carrier_proto_Path__Category_Internet = 2,
    carrier_proto_Path__Category_BrokerOrigin = 3,

}

#[derive(Clone)]
#[repr(C)]
pub enum AuthListResult {
    carrier_proto_AuthListResult_Auth = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum Satellite__Constellation {
    carrier_proto_Satellite__Constellation_Unknown = 0,
    carrier_proto_Satellite__Constellation_Galileo = 1,
    carrier_proto_Satellite__Constellation_Gps = 2,
    carrier_proto_Satellite__Constellation_Glonass = 3,

}

#[derive(Clone)]
#[repr(C)]
pub enum ConnectRequest__TargetType {
    carrier_proto_ConnectRequest__TargetType_Identity = 0,
    carrier_proto_ConnectRequest__TargetType_Alias = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum Mem {
    carrier_proto_Mem_Total = 1,
    carrier_proto_Mem_Free = 2,
    carrier_proto_Mem_Available = 3,

}

#[derive(Clone)]
#[repr(C)]
pub enum Location__Fix {
    carrier_proto_Location__Fix_None = 0,
    carrier_proto_Location__Fix_Gps = 1,
    carrier_proto_Location__Fix_DGps = 2,
    carrier_proto_Location__Fix_Pps = 3,
    carrier_proto_Location__Fix_Rtk = 4,
    carrier_proto_Location__Fix_FloatRtk = 5,
    carrier_proto_Location__Fix_Estimated = 6,
    carrier_proto_Location__Fix_Manual = 7,
    carrier_proto_Location__Fix_Simulation = 8,

}


pub mod heap {
}
extern {


    #[link_name = "carrier_proto_SensorTypes"]
    pub fn r#SensorTypes( Zindex: usize)  -> super::protonerf::FieldType;









    #[link_name = "carrier_proto_SubscribeChangeTypes"]
    pub fn r#SubscribeChangeTypes( Zindex: usize)  -> super::protonerf::FieldType;







    #[link_name = "carrier_proto_SysinfoTypes"]
    pub fn r#SysinfoTypes( Zindex: usize)  -> super::protonerf::FieldType;



    #[link_name = "carrier_proto_ConnectResponseTypes"]
    pub fn r#ConnectResponseTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_LoadTypes"]
    pub fn r#LoadTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_AuthorizationGetTypes"]
    pub fn r#AuthorizationGetTypes( Zindex: usize)  -> super::protonerf::FieldType;




    #[link_name = "carrier_proto_PublishRequestTypes"]
    pub fn r#PublishRequestTypes( Zindex: usize)  -> super::protonerf::FieldType;




    #[link_name = "carrier_proto_NetdevTypes"]
    pub fn r#NetdevTypes( Zindex: usize)  -> super::protonerf::FieldType;





    #[link_name = "carrier_proto_DiscoveryResponseTypes"]
    pub fn r#DiscoveryResponseTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_NetAddressTypes"]
    pub fn r#NetAddressTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_InnerTraceResponseTypes"]
    pub fn r#InnerTraceResponseTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_ClaimOneTypes"]
    pub fn r#ClaimOneTypes( Zindex: usize)  -> super::protonerf::FieldType;



    #[link_name = "carrier_proto_ClaimAllTypes"]
    pub fn r#ClaimAllTypes( Zindex: usize)  -> super::protonerf::FieldType;






    #[link_name = "carrier_proto_TraceShadowTypes"]
    pub fn r#TraceShadowTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_ClusterShardTypes"]
    pub fn r#ClusterShardTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_FirmwareTypes"]
    pub fn r#FirmwareTypes( Zindex: usize)  -> super::protonerf::FieldType;





    #[link_name = "carrier_proto_FileSystemTypes"]
    pub fn r#FileSystemTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_RevokerTypes"]
    pub fn r#RevokerTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_GenesisUpdateTypes"]
    pub fn r#GenesisUpdateTypes( Zindex: usize)  -> super::protonerf::FieldType;



    #[link_name = "carrier_proto_LocationAccuracityTypes"]
    pub fn r#LocationAccuracityTypes( Zindex: usize)  -> super::protonerf::FieldType;



    #[link_name = "carrier_proto_NoneTypes"]
    pub fn r#NoneTypes( Zindex: usize)  -> super::protonerf::FieldType;



    #[link_name = "carrier_proto_InteractiveAuthTypes"]
    pub fn r#InteractiveAuthTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_FilterByRoleTypes"]
    pub fn r#FilterByRoleTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_UnameTypes"]
    pub fn r#UnameTypes( Zindex: usize)  -> super::protonerf::FieldType;



    #[link_name = "carrier_proto_PublishTypes"]
    pub fn r#PublishTypes( Zindex: usize)  -> super::protonerf::FieldType;



    #[link_name = "carrier_proto_CertificateTypes"]
    pub fn r#CertificateTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_SensorsTypes"]
    pub fn r#SensorsTypes( Zindex: usize)  -> super::protonerf::FieldType;




    #[link_name = "carrier_proto_ArpTypes"]
    pub fn r#ArpTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_TraceResponseTypes"]
    pub fn r#TraceResponseTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_SatelliteTypes"]
    pub fn r#SatelliteTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_ExceptionalRouteTypes"]
    pub fn r#ExceptionalRouteTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_WifiInterfaceTypes"]
    pub fn r#WifiInterfaceTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_AuthorizationDelTypes"]
    pub fn r#AuthorizationDelTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_PathTypes"]
    pub fn r#PathTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_GenesisCurrentTypes"]
    pub fn r#GenesisCurrentTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_ClusterStateTypes"]
    pub fn r#ClusterStateTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_PeerConnectRequestTypes"]
    pub fn r#PeerConnectRequestTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_ConnectRequestTypes"]
    pub fn r#ConnectRequestTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_AuthorizationAddTypes"]
    pub fn r#AuthorizationAddTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_SupersedeTypes"]
    pub fn r#SupersedeTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_WifiStationTypes"]
    pub fn r#WifiStationTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_AliasTypes"]
    pub fn r#AliasTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_NetSurveyTypes"]
    pub fn r#NetSurveyTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_LocationTypes"]
    pub fn r#LocationTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_SwitchTypes"]
    pub fn r#SwitchTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_InnerTraceRequestTypes"]
    pub fn r#InnerTraceRequestTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_FilterTypes"]
    pub fn r#FilterTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_ClusterConfigTypes"]
    pub fn r#ClusterConfigTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_ConfirmationTypes"]
    pub fn r#ConfirmationTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_CertificateRequestTypes"]
    pub fn r#CertificateRequestTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_NetworkGetResultTypes"]
    pub fn r#NetworkGetResultTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_PeerConnectResponseTypes"]
    pub fn r#PeerConnectResponseTypes( Zindex: usize)  -> super::protonerf::FieldType;
